--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CEFORO</title>
+    <meta charset="utf-8" />
+    <title>ceforoinc</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="logo">
+        <img src="ceforo.jpeg" alt="hihi" />
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Our Team</a></li>
+      </ul>
+    </nav>
+
+    <section id="LandingPage">
+      <h1>We automate things.</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br />At
+        dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
+      </p>
+    </section>
+  </body>
 </html>
