--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav>
       <div class="logo">
-        <img src="ceforo.jpeg" alt="hihi" />
+        <img src="../public/assets/ceforo.jpeg" alt="hihi" />
       </div>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
