--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
+    <!-- CSS Links -->
     <link rel="stylesheet" href="../styles.css" />
+    <!-- Bootstrap Link -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   </head>
   <body>
     <nav>
@@ -33,5 +37,17 @@
         dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
       </p>
     </section>
+    <section class="about-us-container">
+      <div class="row">
+        <div class="col-lg-6 col-md-12">
+          <img src="../public/assets/images/abcdefg.png" alt="">
+          </div>
+
+        
+      </div>
+      
+    </section>
+    <!-- Bootstrap script -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
