--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,17 @@
     <!-- CSS Links -->
     <link rel="stylesheet" href="../styles.css" />
     <!-- Bootstrap Link -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <nav>
       <div class="logo">
-        <img src="../public/assets/ceforo.jpeg" alt="hihi" />
+        <img src="../public/assets/images/ceforo.jpeg" alt="brand-image" />
       </div>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
@@ -40,14 +44,45 @@
     <section class="about-us-container">
       <div class="row">
         <div class="col-lg-6 col-md-12">
-          <img src="../public/assets/images/abcdefg.png" alt="">
-          </div>
-
-        
+          <img clas="ml-2 " src="../public/assets/images/abcdefg.png" alt="" />
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br />At
+            dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
+          </p>
+        </div>
       </div>
-      
+
+      <div class="row">
+        <div class="col-lg-6 col-md-12">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br />At
+            dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
+          </p>
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <img clas="ml-2 " src="../public/assets/images/abcdefg.png" alt="" />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6 col-md-12">
+          <img clas="ml-2 " src="../public/assets/images/abcdefg.png" alt="" />
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br />At
+            dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
+          </p>
+        </div>
+      </div>
     </section>
     <!-- Bootstrap script -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
