--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-    <!-- CSS Links -->
+
     <link rel="stylesheet" href="./css/styles.css" />
-    <!-- Bootstrap Link -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    />
+
   </head>
   <body>
+
+    <!-- Navbar -->
+
     <nav>
       <div class="logo">
         <img src="../public/assets/images/ceforo.jpeg" alt="brand-image" />
@@ -34,56 +31,27 @@
       </ul>
     </nav>
 
-    <section id="LandingPage">
-      <h1>We automate things.</h1>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br />At
-        dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
-      </p>
+    <div class="logo-C-image"></div>
+
+    <!-- Landing Page -->
+
+    <section id="landingpage">
+      
+      <div class="container">
+
+        <div class="landingpage-content">
+          <h1 class="lead-heading">We automate things.</h1>
+          <p class="primary-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. At
+            dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
+          </p>
+
+        </div>
+
+      </div>
+
     </section>
 
-    <section class="about-us-container">
-      <div class="row">
-        <div class="col-lg-6 col-md-12">
-          <img clas="ml-2 " src="../public/assets/images/abcdefg.png" alt="" />
-        </div>
-        <div class="col-lg-6 col-md-12">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br />At
-            dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
-          </p>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col-lg-6 col-md-12">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br />At
-            dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
-          </p>
-        </div>
-        <div class="col-lg-6 col-md-12">
-          <img clas="ml-2 " src="../public/assets/images/abcdefg.png" alt="" />
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-6 col-md-12">
-          <img clas="ml-2 " src="../public/assets/images/abcdefg.png" alt="" />
-        </div>
-        <div class="col-lg-6 col-md-12">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br />At
-            dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
-          </p>
-        </div>
-      </div>
-    </section>
-    <!-- Bootstrap script -->
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
