--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!-- CSS Links -->
     <link rel="stylesheet" href="./css/styles.css" />
     <!-- JS link -->
-    <script defer src="./js/app.js"></script>
+    <script defer src="./js/slider.js"></script>
   </head>
   <body>
     <!-- Navbar --> 
