mobile styles added

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ceforoinc</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
@@ -13,7 +14,10 @@
     />
 
     <!-- CSS Links -->
+
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" media="(max-width : 1100px)" href="./css/mobile.css">
+    
     <!-- JS link -->
     <script defer src="./js/slider.js"></script>
   </head>
@@ -38,7 +42,7 @@
 
     <section id="landingpage">
 
-      <div class="container">
+      
         <div class="landingpage-content">
           <h1 class="lead-heading">We automate things.</h1>
           <p class="primary-text">
@@ -46,7 +50,7 @@
             dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
           </p>
         </div>
-      </div>
+  
     </section>
 
   <!-- About US Section -->
