--- a/src/index.html
+++ b/src/index.html
@@ -1,94 +1,106 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ceforoinc</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
-      rel="stylesheet"
-    />
 
-    <!-- CSS Links -->
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ceforoinc</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" media="(max-width : 1100px)" href="./css/mobile.css">
-    
-    <!-- JS link -->
-    <script defer src="./js/slider.js"></script>
-  </head>
-  <body>
-    <!-- Navbar --> 
+  <!-- CSS Links -->
 
-    <nav>
-      <div class="logo">
-        <img src="../public/assets/images/ceforo.jpeg" alt="brand-image" />
-      </div>
-      <ul class="nav-links">
-        <li><a href="#landingpage">Home</a></li>
-        <li><a href="#about-us">About us</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Our Team</a></li>
-      </ul>
-    </nav>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" media="(max-width : 1100px)" href="./css/mobile.css">
 
-    <div class="logo-C-image"></div>
+  <!-- JS link -->
+  <script defer src="./js/slider.js"></script>
+</head>
 
-    <!-- Landing Page -->
+<body>
+  <!-- Navbar -->
 
-    <section id="landingpage">
+  <nav>
+    <div class="logo">
+      <img src="../public/assets/images/ceforo.jpeg" alt="brand-image" />
+    </div>
+    <ul class="nav-links">
+      <li><a href="#landingpage">Home</a></li>
+      <li><a href="#about-us">About us</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#">Our Team</a></li>
+    </ul>
+  </nav>
 
-      
-        <div class="landingpage-content">
-          <h1 class="lead-heading">We automate things.</h1>
-          <p class="primary-text">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. At
-            dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
-          </p>
-        </div>
-  
-    </section>
+  <div class="logo-C-image"></div>
+
+  <!-- Landing Page -->
+
+  <section id="landingpage">
+
+
+    <div class="landingpage-content">
+      <h1 class="lead-heading">We automate things.</h1>
+      <p class="primary-text">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. At
+        dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
+      </p>
+    </div>
+
+  </section>
 
   <!-- About US Section -->
 
   <section id="about-us">
-       <!-- Slideshow container -->
-          <div class="slideshow-container">
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
 
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
-              <img src="/public/assets/images/ceforo.jpeg" alt="slider-image-1">
-              <div class="text">Caption One</div>
-            </div>
+      <!-- Full-width images with number and caption text -->
+      <div class="mySlides fade">
+        <img src="/public/assets/images/ceforo.jpeg" alt="slider-image-1">
+        <div class="text">Caption One</div>
+      </div>
 
-            <div class="mySlides fade">
-              <img src="/public/assets/images/logo_Recovered.png" alt="slider-image-2">
+      <div class="mySlides fade">
+        <img src="/public/assets/images/logo_Recovered.png" alt="slider-image-2">
 
-              <div class="text">Caption Two</div>
-            </div>
+        <div class="text">Caption Two</div>
+      </div>
 
-            <div class="mySlides fade">
-              <img src="/public/assets/images/logo_Recovered2.png" alt="slider-image-3">
+      <div class="mySlides fade">
+        <img src="/public/assets/images/logo_Recovered2.png" alt="slider-image-3">
 
-              <div class="text">Caption Three</div>
-            </div>
+        <div class="text">Caption Three</div>
+      </div>
 
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-          </div>
-          <br>
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
 
-          <!-- The dots/circles -->
-          <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-          </div>
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
   </section>
-  </body>
+
+  <!-- Projects -->
+  <section id="projects">
+    <div class="container">
+      <h1 class="lead-heading">What we are working on</h1>
+      <div class="project-main">
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+      </div>
+
+    </div>
+  </section>
+</body>
+
 </html>
