--- a/src/index.html
+++ b/src/index.html
@@ -1,329 +1,321 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ceforoinc</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ceforoinc</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap" rel="stylesheet">
+    <!-- CSS Links -->
 
-  <!-- CSS Links -->
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      media="(max-width : 1100px)"
+      href="./css/mobile.css"
+    />
 
-  <link rel="stylesheet" href="./css/styles.css" />
-  <link rel="stylesheet" media="(max-width : 1100px)" href="./css/mobile.css">
+    <!-- JS link -->
+    <script defer src="./js/slider.js"></script>
+    <script defer src="./js/navbar.js"></script>
+  </head>
 
-  <!-- JS link -->
-  <script defer src="./js/slider.js"></script>
-</head>
+  <body id="home">
+    <!-- Navbar -->
 
-<body>
-  <!-- Navbar -->
-
-  <nav>
-    <div class="logo">
-      <img src="../public/assets/images/ceforo.jpeg" alt="brand-image" />
-    </div>
-    <ul class="nav-links">
-      <li><a href="#landingpage">Home</a></li>
-      <li><a href="#about-us">About us</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#">Our Team</a></li>
-    </ul>
-  </nav>
-
-  <div class="logo-C-image"></div>
-
-  <!-- Landing Page -->
-
-  <section id="landingpage">
-
-
-    <div class="landingpage-content">
-      <h1 class="lead-heading">We automate things.</h1>
-      <p class="primary-text">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. At
-        dolorum, consequuntur minus amet ab laudantium harum cum dolorem,
-      </p>
-    </div>
-
-  </section>
-
-  <!-- About US Section -->
-
-  <section id="about-us">
-    <!-- Slideshow container -->
-    <div class="slideshow-container">
-
-      <!-- Full-width images with number and caption text -->
-      <div class="mySlides fade">
-        <img src="/public/assets/images/ceforo.jpeg" alt="slider-image-1">
-        <div class="text">Caption One</div>
+    <nav id="navbar">
+      <div class="logo">
+        <img src="../public/assets/images/ceforo.jpeg" alt="brand-image" />
       </div>
+      <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about-us">About us</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#our-team">Our Team</a></li>
+      </ul>
+    </nav>
 
-      <div class="mySlides fade">
-        <img src="/public/assets/images/logo_Recovered.png" alt="slider-image-2">
+    <div class="logo-C-image"></div>
 
-        <div class="text">Caption Two</div>
+    <!-- Landing Page -->
+
+    <section id="landingpage">
+      <div class="landingpage-content">
+        <h1 class="lead-heading">We automate things.</h1>
+        <p class="primary-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. At dolorum,
+          consequuntur minus amet ab laudantium harum cum dolorem,
+        </p>
       </div>
+    </section>
 
-      <div class="mySlides fade">
-        <img src="/public/assets/images/logo_Recovered2.png" alt="slider-image-3">
+    <!-- About US Section -->
 
-        <div class="text">Caption Three</div>
-      </div>
-
-      <!-- Next and previous buttons -->
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br>
-
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
-  </section>
-
-  <!-- Projects -->
-  <section id="projects">
-    <div class="container">
-      <h1 class="lead-heading">What we are working on</h1>
-      <div class="project-main">
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Our Team -->
-  <section id="our-team">
-    <div class="container">
-      <h1 class="lead-heading">Our Team</h1>
-
-      <div class="members">
-
-        <div class="image">
-          <div class="front-side">
-            <h1>image</h1>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
+    <section id="about-us">
+      <!-- Slideshow container -->
+      <div class="slideshow-container">
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+          <img src="/public/assets/images/ceforo.jpeg" alt="slider-image-1" />
+          <div class="text">Caption One</div>
         </div>
 
-        <div class="description">
-          <div class="front-side">
-            <h1>NAME name</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. </p>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
+        <div class="mySlides fade">
+          <img
+            src="/public/assets/images/logo_Recovered.png"
+            alt="slider-image-2"
+          />
+
+          <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides fade">
+          <img
+            src="/public/assets/images/logo_Recovered2.png"
+            alt="slider-image-3"
+          />
+
+          <div class="text">Caption Three</div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br />
+
+      <!-- The dots/circles -->
+      <div style="text-align: center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects">
+      <div class="container">
+        <h1 class="lead-heading">What we are working on</h1>
+        <div class="project-main">
+          <div class="project"></div>
+          <div class="project"></div>
+          <div class="project"></div>
         </div>
       </div>
+    </section>
 
+    <!-- Our Team -->
+    <section id="our-team">
+      <div class="container">
+        <h1 class="lead-heading">Our Team</h1>
 
-
-      <div class="members">
-
-        <div class="description">
-          <div class="front-side">
-            <h1>NAME name</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. </p>
+        <div class="members">
+          <div class="image">
+            <div class="front-side">
+              <h1>image</h1>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
           </div>
-          <div class="back-side">
-            <h1>BACK</h1>
+
+          <div class="description">
+            <div class="front-side">
+              <h1>NAME name</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
           </div>
         </div>
 
-
-        <div class="image">
-          <div class="front-side">
-            <h1>image</h1>
+        <div class="members">
+          <div class="description">
+            <div class="front-side">
+              <h1>NAME name</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
           </div>
-          <div class="back-side">
-            <h1>BACK</h1>
+
+          <div class="image">
+            <div class="front-side">
+              <h1>image</h1>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
           </div>
         </div>
 
+        <div class="members">
+          <div class="image">
+            <div class="front-side">
+              <h1>image</h1>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
 
+          <div class="description">
+            <div class="front-side">
+              <h1>NAME name</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+        </div>
+
+        <div class="members">
+          <div class="description">
+            <div class="front-side">
+              <h1>NAME name</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+
+          <div class="image">
+            <div class="front-side">
+              <h1>image</h1>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+        </div>
+
+        <div class="members">
+          <div class="image">
+            <div class="front-side">
+              <h1>image</h1>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+
+          <div class="description">
+            <div class="front-side">
+              <h1>NAME name</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+        </div>
+
+        <div class="members">
+          <div class="description">
+            <div class="front-side">
+              <h1>NAME name</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+
+          <div class="image">
+            <div class="front-side">
+              <h1>image</h1>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+        </div>
+
+        <div class="members">
+          <div class="image">
+            <div class="front-side">
+              <h1>image</h1>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+
+          <div class="description">
+            <div class="front-side">
+              <h1>NAME name</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+        </div>
+
+        <div class="members">
+          <div class="description">
+            <div class="front-side">
+              <h1>NAME name</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+
+          <div class="image">
+            <div class="front-side">
+              <h1>image</h1>
+            </div>
+            <div class="back-side">
+              <h1>BACK</h1>
+            </div>
+          </div>
+        </div>
       </div>
-
-
-
-      <div class="members">
-
-        <div class="image">
-          <div class="front-side">
-            <h1>image</h1>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-
-        <div class="description">
-          <div class="front-side">
-            <h1>NAME name</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. </p>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div class="members">
-
-        <div class="description">
-          <div class="front-side">
-            <h1>NAME name</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. </p>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-
-
-        <div class="image">
-          <div class="front-side">
-            <h1>image</h1>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-
-
-      </div>
-
-
-
-      <div class="members">
-
-        <div class="image">
-          <div class="front-side">
-            <h1>image</h1>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-
-        <div class="description">
-          <div class="front-side">
-            <h1>NAME name</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. </p>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="members">
-
-        <div class="description">
-          <div class="front-side">
-            <h1>NAME name</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. </p>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-
-
-        <div class="image">
-          <div class="front-side">
-            <h1>image</h1>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-
-
-      </div>
-
-
-
-      <div class="members">
-
-        <div class="image">
-          <div class="front-side">
-            <h1>image</h1>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-
-        <div class="description">
-          <div class="front-side">
-            <h1>NAME name</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. </p>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="members">
-
-        <div class="description">
-          <div class="front-side">
-            <h1>NAME name</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. </p>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-
-
-        <div class="image">
-          <div class="front-side">
-            <h1>image</h1>
-          </div>
-          <div class="back-side">
-            <h1>BACK</h1>
-          </div>
-        </div>
-
-
-      </div>
-
-
-
-
-
-    </div>
-
-
-
-  </section>
-</body>
-
+    </section>
+  </body>
 </html>
