chore(ourTeam): add descriptioon to cards

--- a/src/index.html
+++ b/src/index.html
@@ -133,26 +133,26 @@
           <div class="tile">
             <div class="front-side">
               <img src="" alt="" />
-              <h1>NAME name</h1>
+              <h1>Aryan Jalla</h1>
               <p>
-                designation
+                Founder
               </p>
             </div>
             <div class="back-side">
               <div class="top">
-                <h1>Suritam Nandy</h1>
+                <h1>Aryan Jalla</h1>
                 <ul>
                   <li>
                     <a href="#"
                       ><i class="fas fa-envelope"
-                        ><span> Mail : 13suritsuritam@gmail.com </span></i
+                        ><span> Mail : jallaaryan@gmail.com </span></i
                       ></a
                     >
                   </li>
                   <li>
                     <a href="#"
                       ><i class="fas fa-phone"
-                        ><span> Mob: +91 8436690933</span></i
+                        ><span> Mob: +91 7020709204</span></i
                       ></a
                     >
                   </li>
@@ -160,8 +160,8 @@
               </div>
               <div class="body">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Aryan thinks of himself as a chef who mixes 0s and 1s to come
+                  up with new ideas bit-by-bit.
                 </p>
               </div>
             </div>
@@ -170,26 +170,26 @@
           <div class="tile">
             <div class="front-side">
               <img src="" alt="" />
-              <h1>NAME name</h1>
+              <h1>Pavan Kommisetty</h1>
               <p>
-                designation
+                Co-Founder
               </p>
             </div>
             <div class="back-side">
               <div class="top">
-                <h1>Suritam Nandy</h1>
+                <h1>Pavan Kommisetty</h1>
                 <ul>
                   <li>
                     <a href="#"
                       ><i class="fas fa-envelope"
-                        ><span> Mail : 13suritsuritam@gmail.com </span></i
+                        ><span> Mail : pavan.k2001@gmail.com </span></i
                       ></a
                     >
                   </li>
                   <li>
                     <a href="#"
                       ><i class="fas fa-phone"
-                        ><span> Mob: +91 8436690933</span></i
+                        ><span> Mob: +91 8208523361</span></i
                       ></a
                     >
                   </li>
@@ -197,8 +197,9 @@
               </div>
               <div class="body">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Pavan is a person who is very passionate about exploring new
+                  tech and strongly believes that with hardwork and will, one
+                  can achieve anything.
                 </p>
               </div>
             </div>
@@ -207,9 +208,9 @@
           <div class="tile">
             <div class="front-side">
               <img src="" alt="" />
-              <h1>NAME name</h1>
+              <h1>Suritam Nandy</h1>
               <p>
-                designation
+                Co-Founder
               </p>
             </div>
             <div class="back-side">
@@ -234,8 +235,9 @@
               </div>
               <div class="body">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Suritam thinks technology can provide efficient alternatives
+                  to our tedious daily tasks and is on the lookout to bring
+                  changes.
                 </p>
               </div>
             </div>
@@ -244,26 +246,26 @@
           <div class="tile">
             <div class="front-side">
               <img src="" alt="" />
-              <h1>NAME name</h1>
+              <h1>Soumik Chaudhuri</h1>
               <p>
-                designation
+                Technical
               </p>
             </div>
             <div class="back-side">
               <div class="top">
-                <h1>Suritam Nandy</h1>
+                <h1>Soumik Chaudhuri</h1>
                 <ul>
                   <li>
                     <a href="#"
                       ><i class="fas fa-envelope"
-                        ><span> Mail : 13suritsuritam@gmail.com </span></i
+                        ><span> Mail : soumik.chaudhuri2000@gmail.com </span></i
                       ></a
                     >
                   </li>
                   <li>
                     <a href="#"
                       ><i class="fas fa-phone"
-                        ><span> Mob: +91 8436690933</span></i
+                        ><span> Mob: +91 9163334018</span></i
                       ></a
                     >
                   </li>
@@ -271,8 +273,9 @@
               </div>
               <div class="body">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Soumik is someone who believes in experimental learning, and
+                  that an individual thrives best when in a team, interacting
+                  and improvising.
                 </p>
               </div>
             </div>
@@ -281,26 +284,26 @@
           <div class="tile">
             <div class="front-side">
               <img src="" alt="" />
-              <h1>NAME name</h1>
+              <h1>Swagata Das</h1>
               <p>
-                designation
+                Technical
               </p>
             </div>
             <div class="back-side">
               <div class="top">
-                <h1>Suritam Nandy</h1>
+                <h1>Swagata Das</h1>
                 <ul>
                   <li>
                     <a href="#"
                       ><i class="fas fa-envelope"
-                        ><span> Mail : 13suritsuritam@gmail.com </span></i
+                        ><span> Mail : swagatadas6121@gmail.com </span></i
                       ></a
                     >
                   </li>
                   <li>
                     <a href="#"
                       ><i class="fas fa-phone"
-                        ><span> Mob: +91 8436690933</span></i
+                        ><span> Mob: +91 9101083438</span></i
                       ></a
                     >
                   </li>
@@ -308,8 +311,10 @@
               </div>
               <div class="body">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Swagata believes in creating magic with technology. She is a
+                  very enthusiastic and passionate learner. She thrives on
+                  challenges and her strengths are hard working and adaptability
+                  in any situation.
                 </p>
               </div>
             </div>
@@ -318,26 +323,26 @@
           <div class="tile">
             <div class="front-side">
               <img src="" alt="" />
-              <h1>NAME name</h1>
+              <h1>Neelesh Kumar Jha</h1>
               <p>
-                designation
+                Design
               </p>
             </div>
             <div class="back-side">
               <div class="top">
-                <h1>Suritam Nandy</h1>
+                <h1>Neelesh Kumar Jha</h1>
                 <ul>
                   <li>
                     <a href="#"
                       ><i class="fas fa-envelope"
-                        ><span> Mail : 13suritsuritam@gmail.com </span></i
+                        ><span> Mail : njha7431@gmail.com </span></i
                       ></a
                     >
                   </li>
                   <li>
                     <a href="#"
                       ><i class="fas fa-phone"
-                        ><span> Mob: +91 8436690933</span></i
+                        ><span> Mob: +91 9382171951</span></i
                       ></a
                     >
                   </li>
@@ -345,8 +350,9 @@
               </div>
               <div class="body">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Neelesh is a person who wants to work with complete perfection
+                  and come up with new ideas to bring up the things which may
+                  help the youth to develop their skills
                 </p>
               </div>
             </div>
@@ -355,26 +361,26 @@
           <div class="tile">
             <div class="front-side">
               <img src="" alt="" />
-              <h1>NAME name</h1>
+              <h1>Sudhanwa Bandi</h1>
               <p>
-                designation
+                Public Affairs
               </p>
             </div>
             <div class="back-side">
               <div class="top">
-                <h1>Suritam Nandy</h1>
+                <h1>Sudhanwa Bandi</h1>
                 <ul>
                   <li>
                     <a href="#"
                       ><i class="fas fa-envelope"
-                        ><span> Mail : 13suritsuritam@gmail.com </span></i
+                        ><span> Mail : sudhanwabandi@gmail.com </span></i
                       ></a
                     >
                   </li>
                   <li>
                     <a href="#"
                       ><i class="fas fa-phone"
-                        ><span> Mob: +91 8436690933</span></i
+                        ><span> Mob: +91 9448339200</span></i
                       ></a
                     >
                   </li>
@@ -382,8 +388,10 @@
               </div>
               <div class="body">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Sudhanwa is a person who is interested in tech miracles and
+                  always looks on a project or a product through the eyes of an
+                  entrepreneur, so this boosts him up to come up with new ideas
+                  and skills.
                 </p>
               </div>
             </div>
