--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
         <div class="members">
           <div class="tile">
             <div class="front-side">
-              <img src="" alt="" />
+              <img src="../public/assets/images/jalla.jpg" alt="" />
               <h1>Aryan Jalla</h1>
               <p>
                 Founder
@@ -169,7 +169,7 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="" alt="" />
+              <img src="../public/assets/images/pavan.jpg" alt="" />
               <h1>Pavan Kommisetty</h1>
               <p>
                 Co-Founder
@@ -207,7 +207,7 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="" alt="" />
+              <img src="../public/assets/images/Suritam.jpg" alt="" />
               <h1>Suritam Nandy</h1>
               <p>
                 Co-Founder
@@ -245,7 +245,7 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="" alt="" />
+              <img src="../public/assets/images/soumik.png" alt="" />
               <h1>Soumik Chaudhuri</h1>
               <p>
                 Technical
@@ -283,7 +283,7 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="" alt="" />
+              <img src="../public/assets/images/swagata.jpg" alt="" />
               <h1>Swagata Das</h1>
               <p>
                 Technical
@@ -311,8 +311,7 @@
               </div>
               <div class="body">
                 <p>
-                  Swagata believes in creating magic with technology. She is a
-                  very enthusiastic and passionate learner. She thrives on
+                  Swagata believes in creating magic with technology. She thrives on
                   challenges and her strengths are hard working and adaptability
                   in any situation.
                 </p>
@@ -322,7 +321,7 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="" alt="" />
+              <img src="../public/assets/images/neelesh.jpeg" alt="" />
               <h1>Neelesh Kumar Jha</h1>
               <p>
                 Design
@@ -360,11 +359,12 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="" alt="" />
-              <h1>Sudhanwa Bandi</h1>
+              <img src="../public/assets/images/sudhanwa.jpg" alt="" />
+             <h1>Sudhanwa Bandi</h1>
               <p>
                 Public Affairs
               </p>
+              
             </div>
             <div class="back-side">
               <div class="top">
