--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
         <div class="members">
           <div class="tile">
             <div class="front-side">
-              <img src="../public/assets/images/jalla.jpg" alt="" />
+              <img src="./public/assets/images/jalla.jpg" alt="" />
               <h1>Aryan Jalla</h1>
               <p>Founder</p>
             </div>
@@ -168,7 +168,7 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="../public/assets/images/pavan.jpg" alt="" />
+              <img src="./public/assets/images/pavan.jpg" alt="" />
               <h1>Pavan Kommisetty</h1>
               <p>Co-Founder</p>
             </div>
@@ -204,7 +204,7 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="../public/assets/images/Suritam.jpg" alt="" />
+              <img src="./public/assets/images/Suritam.jpg" alt="" />
               <h1>Suritam Nandy</h1>
               <p>Co-Founder</p>
             </div>
@@ -240,7 +240,7 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="../public/assets/images/soumik.png" alt="" />
+              <img src="./public/assets/images/soumik.png" alt="" />
               <h1>Soumik Chaudhuri</h1>
               <p>Technical</p>
             </div>
@@ -276,7 +276,7 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="../public/assets/images/swagata.jpg" alt="" />
+              <img src="./public/assets/images/swagata.jpg" alt="" />
               <h1>Swagata Das</h1>
               <p>Technical</p>
             </div>
@@ -312,7 +312,7 @@
 
           <div class="tile">
             <div class="front-side">
-              <img src="../public/assets/images/neelesh.jpeg" alt="" />
+              <img src="./public/assets/images/neelesh.jpeg" alt="" />
               <h1>Neelesh Kumar Jha</h1>
               <p>Design</p>
             </div>
@@ -349,7 +349,7 @@
           <div class="tile">
             <div class="front-side">
 
-              <img src="../public/assets/images/sudhanwa.jpg" alt="" />
+              <img src="./public/assets/images/sudhanwa.jpg" alt="" />
              <h1>Sudhanwa Bandi</h1>
               <p>
                 Public Affairs
