--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ceforo</title>
-    <meta name="description" content="Ceforo is a club in SRM IST that focuses on automation technology."
+    <meta name="description" content="Ceforo is a club in SRM IST that focuses on automation technology." />
+
+    <link rel="shortcut icon" href="../src/public/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../src/public/assets/images/favicon.ico" type="image/x-icon">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
