landing page image changed

--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
           <div class="leads">
 
             <div class="lead">
-              <img src="./public/assets/images/jalla.jpg" loading="lazy" alt="ceforo-team">
+              <img src="./public/assets/images/jalla.jpg" loading="lazy" alt="ceforo-team" class="links-image">
               <p class="primary-text">Aryan Jalla</p>
               <p class="small-text">Team Lead</p>
             </div>
