--- a/src/index.html
+++ b/src/index.html
@@ -66,9 +66,8 @@
     <section id="landingpage">
       <div class="landingpage-content">
         <h1 class="lead-heading">We automate things.</h1>
-        <p class="primary-text">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. At dolorum,
-          consequuntur minus amet ab laudantium harum cum dolorem,
+        <p class="primary-text landingpage-tagline">
+          Automation is working a lot to cut down the work by tightening the corners and not cutting them.
         </p>
       </div>
       <div class="landingpage-image"></div>
@@ -82,7 +81,8 @@
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
           <img src="./public/assets/images/aboutUs1.jpg" alt="ceforo-about-us" />
-          <div class="text">Caption One</div>
+          <div class="about-us-heading">ABOUT US</div>
+          <div class="text">Ceforo is a zestful student based team under the auspices of SRMIST that develops automation technology. We come together to channelize our innovation and knowledge to make a place in our routine life.</div>
         </div>
 
         <div class="mySlides fade">
@@ -90,8 +90,10 @@
             src="./public/assets/images/aboutUs1.jpg" 
             alt="ceforo-about-us"
           />
+          <div class="about-us-heading">MISSION</div>
 
-          <div class="text">Caption Two</div>
+          <div class="text">
+            To build a quintessential co learning environment for students of SRM-IST in the fields of App/WebDev, AI, Robotics, Electronics and Design.</div>
         </div>
 
         <div class="mySlides fade">
@@ -100,8 +102,9 @@
             loading="lazy"
             alt="ceforo-about-us"
           />
+          <div class="about-us-heading">VISION</div>
 
-          <div class="text">Caption Three</div>
+          <div class="text">To incorporate the methodology of automation that can reinforce minimal human interface.</div>
         </div>
 
         <!-- Next and previous buttons -->
