--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
                 <div class="flip-card-back">
                   <h1>Ceforo Voice</h1>
                   
-                  <p>Own own voice assistant has now a basic framework. It has the intelligence of answering who, what and time and weather questions. Our plan is to add other features to it and to have it control our various devices too.</p>
+                  <p>Our own voice assistant has now a basic framework. It has the intelligence of answering who, what and time and weather questions. Our plan is to add other features to it and to have it control our various devices too.</p>
                   
                 </div>
               </div>
